feat: resolve css conflicts - BEM

--- a/apps/posts/src/components/button.css
+++ b/apps/posts/src/components/button.css
@@ -1,4 +1,4 @@
-.button {
+.posts__button {
   padding: 10px 20px;
   background-color: #424eb9;
   color: white;
@@ -7,6 +7,6 @@
   cursor: pointer;
 }
 
-.button:hover {
+.posts__button:hover {
   background-color: #983669;
 }
